[metadata]
name = preview-control
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A Python package for preview control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/preview-control
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    control
    scipy
    matplotlib

[options.packages.find]
where = .
